# full-node-raffle

./: .env.example  .gitignore  Dockerfile  ENTERING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  verify.html  verify.py
.github/workflows/: ci.yml
node_raffle/: __init__.py  blockchain.py  check_node.py  cli.py  draw.py  nostr_publish.py  registry.py
tests/: test_draw.py  test_registry.py
webapp/: app.py
webapp/static/: app.css
webapp/templates/: base.html  enter.html  index.html  public_base.html  round.html
whitepaper/: node-raffle-whitepaper.docx
