[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "node-raffle"
version = "0.1.0"
description = "Provably fair Bitcoin full-node raffle"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "nostr-sdk==0.44.2",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
node-raffle = "node_raffle.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
